--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "^3.4.3",
     "react-select": "^2.4.3",
     "react-swipeable-views": "^0.13.3",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
